[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/src/UISetting.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/anim/ScaleOpen.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/anim/ScaleClose.gd" type="Script" id=4]

[node name="UISetting" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 240, 462 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
ui_type = 1

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
custom_constants/separation = 20
alignment = 1

[node name="BtnClose" type="Button" parent="Panel/HBoxContainer"]
margin_left = 30.0
margin_top = 22.0
margin_right = 190.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "继续游戏"

[node name="BtnBack" type="Button" parent="Panel/HBoxContainer"]
margin_left = 210.0
margin_top = 22.0
margin_right = 370.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "结束游戏"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -85.0
margin_right = 115.0
margin_bottom = 37.0
custom_constants/separation = 25

[node name="HFlowContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 230.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="CbMusic" type="CheckBox" parent="Panel/VBoxContainer/HFlowContainer"]
margin_right = 230.0
margin_bottom = 24.0
text = "Music:"
flat = true

[node name="SLDMusic" type="HSlider" parent="Panel/VBoxContainer/HFlowContainer"]
margin_top = 24.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 0 )
mouse_default_cursor_shape = 2
min_value = -80.0
max_value = 24.0
rounded = true

[node name="HFlowContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 65.0
margin_right = 230.0
margin_bottom = 105.0
custom_constants/separation = 0

[node name="CbSound" type="CheckBox" parent="Panel/VBoxContainer/HFlowContainer2"]
margin_right = 230.0
margin_bottom = 24.0
custom_constants/hseparation = -80
text = "Sound:"
flat = true

[node name="SLDSound" type="HSlider" parent="Panel/VBoxContainer/HFlowContainer2"]
margin_top = 24.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 230, 0 )
mouse_default_cursor_shape = 2
min_value = -80.0
max_value = 24.0
rounded = true

[node name="ScaleClose" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ScaleOpen" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="Panel/HBoxContainer/BtnClose" to="." method="_on_BtnClose_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
